--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "node dist/index.js",
     "build": "tsc && bash ./scripts/copy-files.sh"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": ["agents", "LLMs", "CrewAI"],
+  "author": "Mark Tucker",
+  "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
